--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,20 @@
 --- #YAML:1.0
-name:                Encode-Bootstring
-version:             0.01
-abstract:            Encode and decode utf8 into a set of basic code points
-license:             perl
-author:              
+name:               Encode-Bootstring
+version:            0.02
+abstract:           Encode and decode utf8 into a set of basic code points
+author:
     - Soren Dossing <netcom@sauber.net>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Test::More:                    0
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Test::More:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
